--- a/resources/view/admin/users.html
+++ b/resources/view/admin/users.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html lang="ru" xmlns:th="http://www.thymeleaf.org">
-<th:block th:replace="~{layout/main::page(title='Users',appMain=~{::appMain}, activeMenuItem='users')}">
+
+<html xmlns:th="http://www.thymeleaf.org" lang="ru">
+<script th:src="@{/static/js/common.js}" defer></script>
+<script th:src="@{/static/js/users.js}" defer></script>
+
+<th:block th:replace="~{layout/main::page(title='Users',appMain=~{::appMain})}">
     <appMain>
         <div class="jumbotron pt-4">
             <div class="container">
