--- a/resources/view/index.html
+++ b/resources/view/index.html
@@ -4,11 +4,53 @@
 
 <th:block th:replace="~{layout/main::page(title='JiraRush: mini bugtracking system',appMain=~{::appMain})}">
     <appMain>
-        <h1>JiraRush Home page</h1>
-        <div th:if="${authUser} != null">
-            <form action="/ui/logout" method="post">
-                <button class="btn btn-primary btn-lg mt-3" type="submit">Logout</button>
-            </form>
+        <h1 th:text="#{welcome}"></h1>
+        <body>
+        <span th:text="#{hello}"></span><br>
+        <span th:text="#{welcome}"></span><br>
+        <button type="button" th:text="#{switch-en}" onclick="window.location.href='http://localhost:8080/?localeData=en'"></button> <!-- 3 -->
+        <button type="button" th:text="#{switch-it}" onclick="window.location.href='http://localhost:8080/?localeData=it'"></button>
+        </body>
+        <a th:href="@{/backlog}" class="btn btn-primary" th:text="#{backlog}"></a>
+        <div class="container text-center">
+            <div class="row " th:each="entry: ${taskMap}">
+                <div class="card">
+                    <div class="card-body" th:with="sprint=${entry.key}, tasks=${entry.value}">
+                        <h5 class="card-title" th:text="|Sprint: ${sprint.title}|"></h5>
+                        <h6 class="card-subtitle mb-2 text-muted" style="text-align: left; "
+                            th:text="|Status: ${sprint.statusCode}|"></h6>
+                        <h6 class="card-subtitle mb-2 text-muted" style="text-align: left; "
+                            th:text="|Due date: ${#temporals.format(sprint.endpoint,'dd.MM.yyyy')}|"></h6>
+                        <div class="row">
+                            <div class="col" th:each="task: ${tasks}">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h5 class="card-title mb-2 text-muted" style="text-align: left; "
+                                            th:text="${task.title}"></h5>
+                                        <h6 class="card-subtitle mb-2 text-muted" style="text-align: left; "
+                                            th:text="${task.description}"></h6>
+                                        <h6 class="card-subtitle mb-2 text-muted" style="text-align: left; "
+                                            th:text="${task.priorityCode}"></h6>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+        <script type="text/javascript">
+            $(document).ready(function() {
+                $("#locales").change(function () {
+                    var selectedOption = $('#locales').val();
+                    if (selectedOption != ''){
+                        window.location.replace('?lang=' + selectedOption);
+                    }
+                });
+            });
+        </script>
     </appMain>
 </th:block>
